--- a/index.html
+++ b/index.html
@@ -49,86 +49,101 @@
 			</div>
 			<div class="container">
 				<ul>
-					<a href="https://djalmir.github.io/Home" target="_blank">
-						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
-							<div>
-								<b>Home</b>
-								<hr />
-							</div>
-							<div>
-								<p>
-									With this Home page, you can create websites shortcuts lists. Each shortcut gets the site icon automatically.
-								</p>
-								<p>
-									You can login to your Razion account and access all your shortcuts on any device.
-								</p>
-							</div>
-							<br />
-							<div>
-								<hr />
-								<small>
-									<span>Technologies used in this project:</span><br />
-									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
-									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
-								</small>
-							</div>
-						</li>
-					</a>
+					<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
+						<div>
+							<b>Home</b>
+							<hr />
+						</div>
+						<div>
+							<p>
+								With this Home page, you can create website shortcut lists. Each shortcut gets the site icon automatically.
+							</p>
+							<p>
+								You can login to your Razion account and access all your shortcuts on any device.
+							</p>
+						</div>
+						<zion-carousel srcs="imgs/home (1).png,imgs/home (2).png"></zion-carousel>
+						<div class="aContainer">
+							<a href="https://djalmir.github.io/Home" target="_blank">
+								<button class="blueBt">Visit Site</button>
+							</a>
+						</div>
+						<br />
+						<div>
+							<hr />
+							<small>
+								<span>Technologies used in this project:</span><br />
+								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+							</small>
+						</div>
+					</li>
 
-					<a href="https://djalmir.github.io/TaskBoard" target="_blank">
-						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
-							<div>
-								<b>Task Board</b>
-								<hr />
-							</div>
-							<div>
-								<p>
-									With this personal Kanban and a Razion account you will be able<br />
-									to organize your task boards like a boss on any device!
-								</p>
-								<p>
-									TaskBoard is a PWA!<br />
-									So you can install it on any device!
-								</p>
-							</div>
-							<div>
-								<hr />
-								<small>
-									<span>Technologies used in this project:</span><br />
-									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
-									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
-								</small>
-							</div>
-						</li>
-					</a>
+					<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
+						<div>
+							<b>Task Board</b>
+							<hr />
+						</div>
+						<div>
+							<p>
+								With this personal Kanban and a Razion account you will be able<br />
+								to organize your task boards like a boss on any device!
+							</p>
+							<p>
+								TaskBoard is a PWA!<br />
+								So you can install it on any device!
+							</p>
+						</div>
+						<zion-carousel srcs="imgs/taskboard (1).png,imgs/taskboard (2).png,imgs/taskboard (3).png,imgs/taskboard (4).png"></zion-carousel>
+						<div class="aContainer">
+							<a href="https://djalmir.github.io/TaskBoard" target="_blank">
+								<button class="blueBt">Visit Site</button>
+							</a>
+						</div>
+						<br />
+						<div>
+							<hr />
+							<small>
+								<span>Technologies used in this project:</span><br />
+								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+							</small>
+						</div>
+					</li>
 
-					<a href="https://djalmir.github.io/TaskControlApp" target="_blank">
-						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
-							<div>
-								<b>Task Control</b>
-								<hr />
-							</div>
-							<div>
-								<p>
-									With this Todo list and a Razion account you will be able<br />
-									to organize your tasks like a boss!
-								</p>
-								<p>
-									Task Control is a PWA too!
-								</p>
-							</div>
-							<div>
-								<hr />
-								<small>
-									<span>Technologies used in this project:</span><br />
-									<img src="https://img.shields.io/badge/-Vue.js-202020?style=flat&logo=vue.js" alt="vuejs badge" class="badge" />
-								</small>
-							</div>
-						</li>
-					</a>
-					<a href="https://djalmir.github.io/Games" target="_blank">
+
+					<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
+						<div>
+							<b>Task Control</b>
+							<hr />
+						</div>
+						<div>
+							<p>
+								With this Todo list and a Razion account you will be able<br />
+								to organize your tasks like a boss!
+							</p>
+							<p>
+								Task Control is a PWA too!
+							</p>
+						</div>
+						<zion-carousel srcs="imgs/taskcontrol (1).png,imgs/taskcontrol (2).png,imgs/taskcontrol (3).png,imgs/taskcontrol (4).png"></zion-carousel>
+						<div class="aContainer">
+							<a href="https://djalmir.github.io/TaskControlApp" target="_blank">
+								<button class="blueBt">Visit Site</button>
+							</a>
+						</div>
+						<br />
+						<div>
+							<hr />
+							<small>
+								<span>Technologies used in this project:</span><br />
+								<img src="https://img.shields.io/badge/-Vue.js-202020?style=flat&logo=vue.js" alt="vuejs badge" class="badge" />
+							</small>
+						</div>
+					</li>
+					
 						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 							<div>
 								<b>Games</b>
@@ -141,6 +156,13 @@
 									But I'll be working on this as soon as possible.
 								</p>
 							</div>
+							<zion-carousel srcs="imgs/games (1).png,imgs/games (2).png,imgs/games (3).png,imgs/games (4).png"></zion-carousel>
+							<div class="aContainer">
+								<a href="https://djalmir.github.io/Games" target="_blank">
+									<button class="blueBt">Visit Site</button>
+								</a>
+							</div>
+							<br />
 							<div>
 								<hr>
 								<small>
@@ -151,8 +173,7 @@
 								</small>
 							</div>
 						</li>
-					</a>
-					<a href="https://djalmir.github.io/chat" target="_blank">
+					
 						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 							<div>
 								<b>Chat</b>
@@ -167,6 +188,12 @@
 									Developed with websockets. This chat stores the messages only while the involved users are still logged in.
 								</p>
 							</div>
+							<zion-carousel srcs="imgs/chat (1).png,imgs/chat (2).png,imgs/chat (3).png"></zion-carousel>
+							<div class="aContainer">
+								<a href="https://djalmir.github.io/chat" target="_blank">
+									<button class="blueBt">Visit Site</button>
+								</a>
+							</div>
 							<br />
 							<div>
 								<hr />
@@ -178,7 +205,6 @@
 								</small>
 							</div>
 						</li>
-					</a>
 				</ul>
 			</div>
 
@@ -237,6 +263,7 @@
 		<script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js"></script>
 		<script src="index.js"></script>
 		<script src="./components/message.js"></script>
+		<script src="./components/carousel.js"></script>
 	</body>
 
 </html>
