--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
 			</div>
 			<div class="container">
 				<ul>
-					<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
+					<li>
 						<div>
 							<b>Home</b>
 							<hr />
 						</div>
-						<div>
+						<zion-carousel srcs="imgs/home (1).png,imgs/home (2).png"></zion-carousel>
+						<div class="innerLi">
 							<p>
 								With this Home page, you can create website shortcut lists. Each shortcut gets the site icon automatically.
 							</p>
@@ -62,15 +63,14 @@
 								You can login to your Razion account and access all your shortcuts on any device.
 							</p>
 						</div>
-						<zion-carousel srcs="imgs/home (1).png,imgs/home (2).png"></zion-carousel>
-						<div class="aContainer">
+						<div class="aContainer innerLi">
 							<a href="https://djalmir.github.io/Home" target="_blank">
 								<button class="blueBt">Visit Site</button>
 							</a>
 						</div>
 						<br />
-						<div>
-							<hr />
+						<hr />
+						<div class="innerLi">
 							<small>
 								<span>Technologies used in this project:</span><br />
 								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
@@ -80,12 +80,13 @@
 						</div>
 					</li>
 
-					<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
+					<li>
 						<div>
 							<b>Task Board</b>
 							<hr />
 						</div>
-						<div>
+						<zion-carousel srcs="imgs/taskboard (1).png,imgs/taskboard (2).png,imgs/taskboard (3).png,imgs/taskboard (4).png"></zion-carousel>
+						<div class="innerLi">
 							<p>
 								With this personal Kanban and a Razion account you will be able<br />
 								to organize your task boards like a boss on any device!
@@ -95,15 +96,14 @@
 								So you can install it on any device!
 							</p>
 						</div>
-						<zion-carousel srcs="imgs/taskboard (1).png,imgs/taskboard (2).png,imgs/taskboard (3).png,imgs/taskboard (4).png"></zion-carousel>
-						<div class="aContainer">
+						<div class="aContainer innerLi">
 							<a href="https://djalmir.github.io/TaskBoard" target="_blank">
 								<button class="blueBt">Visit Site</button>
 							</a>
 						</div>
 						<br />
-						<div>
-							<hr />
+						<hr />
+						<div class="innerLi">
 							<small>
 								<span>Technologies used in this project:</span><br />
 								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
@@ -114,12 +114,13 @@
 					</li>
 
 
-					<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
+					<li>
 						<div>
 							<b>Task Control</b>
 							<hr />
 						</div>
-						<div>
+						<zion-carousel srcs="imgs/taskcontrol (1).png,imgs/taskcontrol (2).png,imgs/taskcontrol (3).png,imgs/taskcontrol (4).png"></zion-carousel>
+						<div class="innerLi">
 							<p>
 								With this Todo list and a Razion account you will be able<br />
 								to organize your tasks like a boss!
@@ -128,87 +129,86 @@
 								Task Control is a PWA too!
 							</p>
 						</div>
-						<zion-carousel srcs="imgs/taskcontrol (1).png,imgs/taskcontrol (2).png,imgs/taskcontrol (3).png,imgs/taskcontrol (4).png"></zion-carousel>
-						<div class="aContainer">
+						<div class="aContainer innerLi">
 							<a href="https://djalmir.github.io/TaskControlApp" target="_blank">
 								<button class="blueBt">Visit Site</button>
 							</a>
 						</div>
 						<br />
-						<div>
-							<hr />
+						<hr />
+						<div class="innerLi">
 							<small>
 								<span>Technologies used in this project:</span><br />
 								<img src="https://img.shields.io/badge/-Vue.js-202020?style=flat&logo=vue.js" alt="vuejs badge" class="badge" />
 							</small>
 						</div>
 					</li>
-					
-						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
-							<div>
-								<b>Games</b>
-								<hr />
-							</div>
-							<div>
-								<p>Have fun!</p>
-								<p>
-									Currently the games are working only on desktop.<br />
-									But I'll be working on this as soon as possible.
-								</p>
-							</div>
-							<zion-carousel srcs="imgs/games (1).png,imgs/games (2).png,imgs/games (3).png,imgs/games (4).png"></zion-carousel>
-							<div class="aContainer">
-								<a href="https://djalmir.github.io/Games" target="_blank">
-									<button class="blueBt">Visit Site</button>
-								</a>
-							</div>
-							<br />
-							<div>
-								<hr>
-								<small>
-									<span>Technologies used in this project:</span><br />
-									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
-									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
-								</small>
-							</div>
-						</li>
-					
-						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
-							<div>
-								<b>Chat</b>
-								<hr />
-							</div>
-							<div>
-								<p>
-									Let's say it's a beta version... 😅<br />
-									There's still a lot of work to be done. But you can take a look at how it's getting.
-								</p>
-								<p>
-									Developed with websockets. This chat stores the messages only while the involved users are still logged in.
-								</p>
-							</div>
-							<zion-carousel srcs="imgs/chat (1).png,imgs/chat (2).png,imgs/chat (3).png"></zion-carousel>
-							<div class="aContainer">
-								<a href="https://djalmir.github.io/chat" target="_blank">
-									<button class="blueBt">Visit Site</button>
-								</a>
-							</div>
-							<br />
-							<div>
-								<hr />
-								<small>
-									<span>Technologies used in this project:</span><br />
-									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
-									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
-								</small>
-							</div>
-						</li>
+
+					<li>
+						<div>
+							<b>Games</b>
+							<hr />
+						</div>
+						<zion-carousel srcs="imgs/games (1).png,imgs/games (2).png,imgs/games (3).png,imgs/games (4).png"></zion-carousel>
+						<div class="innerLi">
+							<p>Have fun!</p>
+							<p>
+								Currently the games are working only on desktop.<br />
+								But I'll be working on this as soon as possible.
+							</p>
+						</div>
+						<div class="aContainer innerLi">
+							<a href="https://djalmir.github.io/Games" target="_blank">
+								<button class="blueBt">Visit Site</button>
+							</a>
+						</div>
+						<br />
+						<hr>
+						<div class="innerLi">
+							<small>
+								<span>Technologies used in this project:</span><br />
+								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+							</small>
+						</div>
+					</li>
+
+					<li>
+						<div>
+							<b>Chat</b>
+							<hr />
+						</div>
+						<zion-carousel srcs="imgs/chat (1).png,imgs/chat (2).png,imgs/chat (3).png"></zion-carousel>
+						<div class="innerLi">
+							<p>
+								Let's say it's a beta version... 😅<br />
+								There's still a lot of work to be done. But you can take a look at how it's getting.
+							</p>
+							<p>
+								Developed with websockets. This chat stores the messages only while the involved users are still logged in.
+							</p>
+						</div>
+						<div class="aContainer innerLi">
+							<a href="https://djalmir.github.io/chat" target="_blank">
+								<button class="blueBt">Visit Site</button>
+							</a>
+						</div>
+						<br />
+						<hr />
+						<div class="innerLi">
+							<small>
+								<span>Technologies used in this project:</span><br />
+								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+							</small>
+						</div>
+					</li>
 				</ul>
 			</div>
 
-			<div class="container">
+			<!-- <div class="container">
 				<ul>
 					<li style="cursor: default;" onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 						<div>
@@ -241,7 +241,7 @@
 						</div>
 					</li>
 				</ul>
-			</div>
+			</div> -->
 
 		</section>
 		<div id="footerContainer">
@@ -260,7 +260,7 @@
 			</footer>
 		</div>
 
-		<script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js"></script>
+		<!-- <script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js"></script> -->
 		<script src="index.js"></script>
 		<script src="./components/message.js"></script>
 		<script src="./components/carousel.js"></script>
