--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<b>Home</b>
 							<hr />
 						</div>
-						<zion-carousel srcs="imgs/home (1).png,imgs/home (2).png"></zion-carousel>
+						<zion-carousel srcs="imgs/home (1).png,imgs/home (2).png,imgs/home (3).png,imgs/home (4).png"></zion-carousel>
 						<div class="innerLi">
 							<p>
 								With this Home page, you can create website shortcut lists. Each shortcut gets the site icon automatically.
