--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 		<!-- <script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js"></script> -->
 		<script src="index.js"></script>
 		<script src="./components/message.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/Djalmir/zionCarousel@master/carousel.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/Djalmir/zionCarousel@latest/carousel.js"></script>
 	</body>
 
 </html>
