--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="theme-color" content="#001133">
 		<link rel="stylesheet" href="index.css">
-		<link rel="icon" href="ico.ico" />
+		<link rel="icon" href="favicon.ico" />
 		<title>Djalmir's Projects</title>
 	</head>
 
