Games url update

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 							</p>
 						</div>
 						<div class="aContainer innerLi">
-							<a href="https://djalmir.github.io/Games" target="_blank">
+							<a href="https://games.razion.app.br" target="_blank">
 								<button class="blueBt">Visit Site</button>
 							</a>
 						</div>
