--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 							</p>
 						</div>
 						<div class="aContainer innerLi">
-							<a href="https://djalmir.github.io/Home" target="_blank">
+							<a href="https://home.razion.app.br" target="_blank">
 								<button class="blueBt">Visit Site</button>
 							</a>
 						</div>
@@ -160,7 +160,7 @@
 							</p>
 						</div>
 						<div class="aContainer innerLi">
-							<a href="https://djalmir.github.io/TaskBoard" target="_blank">
+							<a href="https://taskBoard.razion.app.br" target="_blank">
 								<button class="blueBt">Visit Site</button>
 							</a>
 						</div>
@@ -173,37 +173,6 @@
 							</small>
 						</div>
 					</li>
-
-
-					<!-- <li>
-						<div>
-							<b>Task Control</b>
-							<hr />
-						</div>
-						<zion-carousel srcs="imgs/taskcontrol (1).png,imgs/taskcontrol (2).png,imgs/taskcontrol (3).png,imgs/taskcontrol (4).png"></zion-carousel>
-						<div class="innerLi">
-							<p>
-								With this Todo list and a Razion account you will be able<br />
-								to organize your tasks like a boss!
-							</p>
-							<p>
-								Task Control is a PWA too!
-							</p>
-						</div>
-						<div class="aContainer innerLi">
-							<a href="https://djalmir.github.io/TaskControlApp" target="_blank">
-								<button class="blueBt">Visit Site</button>
-							</a>
-						</div>
-						<br />
-						<hr />
-						<div class="innerLi">
-							<small>
-								<span>Technologies used in this project:</span><br />
-								<img src="https://img.shields.io/badge/-Vue.js-202020?style=flat&logo=vue.js" alt="vuejs badge" class="badge" />
-							</small>
-						</div>
-					</li> -->
 
 					<li>
 						<div>
@@ -251,7 +220,7 @@
 							</p>
 						</div>
 						<div class="aContainer innerLi">
-							<a href="https://djalmir.github.io/chat" target="_blank">
+							<a href="https://chat.razion.app.br" target="_blank">
 								<button class="blueBt">Visit Site</button>
 							</a>
 						</div>
